Code review: - Simplify tests and remove some parameterization - Make more fields final - Remove unnecessary annotations - Make tests more parallelizable - Remove permissioning operations and replace them by a blanket   allow/deny setting
And rebase - bump pom version